--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8"/>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+    <meta charset="UTF-8" />
+    <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>freestyle-rgb-editor</title>
 </head>
+
 <body>
-<div id="app"></div>
-<script src="./src/main.js" type="module"></script>
+    <div id="app">
+        <img id="logo" class="logo">
+        <div class="input-box" id="input">
+            <input class="input" id="name" type="text" autocomplete="off" />
+            <button class="btn" onclick="greet()">Greet</button>
+        </div>
+    </div>
+    </div>
+    <script src="./src/main.js" type="module"></script>
 </body>
+
 </html>
