--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,18 +11,117 @@
 
 <body>
     <div id="app">
-        <rgb-keyboard background-url="src/assets/images/keyboard.png"></rgb-keyboard>
+        <rgb-keyboard id="keyboard" background-url="src/assets/images/keyboard.png"></rgb-keyboard>
+        <button id="dump-button">Dump Key Positions to Console</button>
+
         <script type="module">
-            const keyboard = document.querySelector('rgb-keyboard');
+            const keyboardElement = document.getElementById('keyboard');
+            const dumpButton = document.getElementById('dump-button');
+
+            dumpButton.addEventListener('click', () => {
+                if (keyboardElement) {
+                    // Access the getKeyPositions method and log the output
+                    const tsRepresentation = keyboardElement.getKeyPositions();
+                    console.log('Key Positions (TypeScript representation):');
+                    console.log(tsRepresentation);
+                }
+            });
+
+            const xOffset = 260;
+            const yOffset = 220;
+
+            const keyPositions = new Map([
+                ['Esc', [266, 209]],
+                ['F1', [319, 209]],
+                ['F2', [373, 209]],
+                ['F3', [426, 209]],
+                ['F4', [478, 209]],
+                ['F5', [530, 209]],
+                ['F6', [584, 209]],
+                ['F7', [729, 210]],
+                ['F8', [782, 210]],
+                ['F9', [835, 210]],
+                ['F10', [888, 210]],
+                ['F11', [942, 210]],
+                ['F12', [995, 210]],
+                ['`', [267, 281]],
+                ['1', [320, 279]],
+                ['2', [373, 280]],
+                ['3', [426, 280]],
+                ['4', [479, 280]],
+                ['5', [532, 280]],
+                ['6', [584, 280]],
+                ['7', [730, 279]],
+                ['8', [782, 280]],
+                ['9', [836, 280]],
+                ['0', [888, 280]],
+                ['-', [942, 278]],
+                ['=', [994, 278]],
+                ['Home', [1153, 279]],
+                ['Tab', [279, 332]],
+                ['Q', [346, 332]],
+                ['W', [399, 333]],
+                ['E', [452, 332]],
+                ['R', [505, 332]],
+                ['T', [558, 332]],
+                ['Y', [702, 332]],
+                ['U', [756, 333]],
+                ['I', [809, 332]],
+                ['O', [862, 332]],
+                ['P', [914, 332]],
+                ['[', [966, 331]],
+                [']', [1021, 331]],
+                ['\\', [1086, 332]],
+                ['CapsLock', [276, 385]],
+                ['A', [360, 385]],
+                ['S', [412, 386]],
+                ['D', [465, 386]],
+                ['F', [518, 385]],
+                ['G', [571, 386]],
+                ['H', [716, 386]],
+                ['J', [770, 386]],
+                ['K', [821, 386]],
+                ['L', [875, 385]],
+                [';', [928, 383]],
+                ["'", [980, 384]],
+                ['Enter', [1065, 385]],
+                ['Shift', [276, 438]],
+                ['Z', [386, 438]],
+                ['X', [438, 438]],
+                ['C', [490, 438]],
+                ['V', [544, 438]],
+                ['B', [597, 438]],
+                ['N', [742, 439]],
+                ['M', [796, 438]],
+                [',', [848, 437]],
+                ['.', [901, 438]],
+                ['/', [954, 439]],
+                ['ShiftR', [1025, 438]],
+                ['Ctrl', [279, 491]],
+                ['⊞', [345, 490]],
+                ['Alt', [404, 490]],
+                ['Space', [553, 490]],
+                ['AltR', [895, 489]],
+                ['«', [171, 207]],
+                ['CtrlR', [975, 490]],
+                ['Up', [1099, 437]],
+                ['PageDn', [1148, 437]],
+                ['Left', [1046, 490]],
+                ['Down', [1099, 489]],
+                ['Right', [1152, 489]],
+                ['PRNT', [1046, 209]],
+                ['PAUSE', [1100, 209]],
+                ['DEL', [1153, 332]],
+                ['Backspace', [1062, 278]],
+                ['End', [1153, 209]],
+                ['PageUp', [1147, 384]]
+            ]);
+
 
             // Define key positions using a Map with [x, y] tuples
-            keyboard.keyPositions = new Map([
-                ['Q', [50, 50]],
-                ['W', [100, 50]],
-                ['E', [150, 50]],
-                // Add more key positions as needed
-            ]);
+            keyboardElement.keyPositions = keyPositions;
         </script>
+
 
     </div>
     <script src="./src/main.js" type="module"></script>
