Add remaining keys

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -93,28 +93,38 @@
                 ['B', [597, 438]],
                 ['N', [742, 439]],
                 ['M', [796, 438]],
-                [',', [848, 437]],
+                [',', [847, 438]],
                 ['.', [901, 438]],
                 ['/', [954, 439]],
                 ['ShiftR', [1025, 438]],
                 ['Ctrl', [279, 491]],
-                ['⊞', [345, 490]],
+                ['⊞', [346, 489]],
                 ['Alt', [404, 490]],
                 ['Space', [553, 490]],
                 ['AltR', [895, 489]],
                 ['«', [171, 207]],
                 ['CtrlR', [975, 490]],
-                ['Up', [1099, 437]],
-                ['PageDn', [1148, 437]],
-                ['Left', [1046, 490]],
-                ['Down', [1099, 489]],
-                ['Right', [1152, 489]],
+                ['↑', [1100, 437]],
+                ['PgDn', [1152, 437]],
+                ['←', [1046, 490]],
+                ['↓', [1100, 490]],
+                ['→', [1152, 490]],
                 ['PRNT', [1046, 209]],
                 ['PAUSE', [1100, 209]],
                 ['DEL', [1153, 332]],
                 ['Backspace', [1062, 278]],
                 ['End', [1153, 209]],
-                ['PageUp', [1147, 384]]
+                ['PgUp', [1152, 384]],
+                ['①', [145, 280]],
+                ['②', [198, 280]],
+                ['③', [146, 333]],
+                ['④', [199, 333]],
+                ['⑤', [146, 386]],
+                ['⑥', [199, 385]],
+                ['⑦', [146, 438]],
+                ['⑧', [199, 438]],
+                ['FN', [146, 491]],
+                ['☼', [199, 491]]
             ]);
 
 
