Cleanup, all TS

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -134,7 +134,7 @@
 
 
     </div>
-    <script src="./src/main.js" type="module"></script>
+    <script src="./src/main.ts" type="module"></script>
 </body>
 
 </html>
