--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <script type="module" src="./src/rgb-key.ts"></script>
     <script type="module" src="./src/rgb-keyboard.ts"></script>
-    <title>Freestyle RGB Editor</title>
+    <title>Kinesis Keyboard Customizer</title>
 </head>
 
 <body>
