--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <script type="module" src="./src/rgb-key.ts"></script>
     <script type="module" src="./src/rgb-keyboard.ts"></script>
+    <script type="module" src="./src/color-palette.ts"></script>
     <title>Kinesis Keyboard Customizer</title>
 </head>
 
@@ -17,6 +18,8 @@
         </div>
         <button id="dump-button">Dump Key Positions to Console</button>
 
+        <!-- <color-palette></color-palette> -->
+        <color-picker></color-picker>
     </div>
     <script src="./src/main.ts" type="module"></script>
 </body>
