Bind to external property and also fix border color on load

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,7 +22,7 @@
 
         <!-- <color-palette></color-palette> -->
         <!-- <color-picker-hsl></color-picker-hsl> -->
-        <color-picker></color-picker>
+        <color-picker color="#a8223344"></color-picker>
     </div>
     <script src="./src/main.ts" type="module"></script>
 </body>
