Rename to rgb variant

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,9 +6,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <script type="module" src="./src/rgb-key.ts"></script>
     <script type="module" src="./src/rgb-keyboard.ts"></script>
-    <script type="module" src="./src/color-palette.ts"></script>
-    <script type="module" src="./src/color-picker-hsl.ts"></script>
-    <script type="module" src="./src/color-picker.ts"></script>
+    <script type="module" src="./src/color-picker-rgb.ts"></script>
     <title>Kinesis Keyboard Customizer</title>
 </head>
 
@@ -22,7 +20,7 @@
 
         <!-- <color-palette></color-palette> -->
         <!-- <color-picker-hsl></color-picker-hsl> -->
-        <color-picker color="#a8223344"></color-picker>
+        <color-picker-rgb color="#a8223344"></color-picker-rgb>
     </div>
     <script src="./src/main.ts" type="module"></script>
 </body>
