--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,7 +6,8 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <script type="module" src="./src/rgb-key.ts"></script>
     <script type="module" src="./src/rgb-keyboard.ts"></script>
-    <script type="module" src="./src/color-picker-rgb.ts"></script>
+    <!-- <script type="module" src="./src/color-picker-rgb.ts"></script> -->
+    <script type="module" src="./src/color-picker-hsla.ts"></script>
     <title>Kinesis Keyboard Customizer</title>
 </head>
 
@@ -20,7 +21,8 @@
 
         <!-- <color-palette></color-palette> -->
         <!-- <color-picker-hsl></color-picker-hsl> -->
-        <color-picker-rgb color="#a8223344"></color-picker-rgb>
+        <!-- <color-picker-rgb color="#a8223344"></color-picker-rgb> -->
+        <color-picker-hsla></color-picker-hsla>
     </div>
     <script src="./src/main.ts" type="module"></script>
 </body>
