--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,7 @@
     <script type="module" src="./src/rgb-keyboard.ts"></script>
     <!-- <script type="module" src="./src/color-picker-rgb.ts"></script> -->
     <script type="module" src="./src/color-picker-hsla.ts"></script>
+    <script type="module" src="./src/color-palette.ts"></script>
     <title>Kinesis Keyboard Customizer</title>
 </head>
 
@@ -19,10 +20,10 @@
         </div>
         <button id="dump-button">Dump Key Positions to Console</button>
 
-        <!-- <color-palette></color-palette> -->
+        <color-palette></color-palette>
         <!-- <color-picker-hsl></color-picker-hsl> -->
         <!-- <color-picker-rgb color="#a8223344"></color-picker-rgb> -->
-        <color-picker-hsla></color-picker-hsla>
+        <!-- <color-picker-hsla></color-picker-hsla> -->
     </div>
     <script src="./src/main.ts" type="module"></script>
 </body>
